--- a/Frontend/src/pages/permission/viewpermission.css
+++ b/Frontend/src/pages/permission/viewpermission.css
@@ -11,18 +11,20 @@
 
 .permissions-table table {
   border-collapse: collapse;
-  margin-left: 10px;
+  margin-left: 80px;
+  width: 90%;
+  margin-top: 30px;
 }
 
 .permissions-table th,
 .permissions-table td {
   padding: 10px;
   text-align: center;
-  border: 1px solid black;
+  border: 1px solid rgb(114, 110, 110);
 }
 
 .permissions-table th {
-  background-color: rgb(178, 241, 178);
+  background-color: #8DA399;
   position: sticky;
   top: 0; 
   z-index: 2;
