--- a/Frontend/src/Usecase/Allpages/table.css
+++ b/Frontend/src/Usecase/Allpages/table.css
@@ -12,7 +12,7 @@
   padding: 10px;
 }
 th {
-  background-color: #fff; /* Or any background color you prefer */
+  background-color: #8DA399; /* Or any background color you prefer */
   /* Ensure it stays above the table body */
 }
 #tab2 {
@@ -121,7 +121,7 @@ th {
   letter-spacing: 2px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   color: rgb(255, 255, 255);
-  background-color: rgb(119, 114, 114);
+  background-color: #8DA399;
   letter-spacing: 1px;
   position: sticky;
   /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
@@ -136,7 +136,7 @@ th {
 
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  color: rgb(99, 99, 99);
+  color:#8DA399;
   font-family: "Source Sans Pro", sans-serif;
   letter-spacing: 1px;
 }
