--- a/Frontend/src/Usecase/Allpages/usecase.css
+++ b/Frontend/src/Usecase/Allpages/usecase.css
@@ -25,8 +25,8 @@
 }
 #back-btn4{
  position: relative;
-  top:60px;
-  left: 1180px;
+  top:40px;
+  left: 1250px;
   width: 70px;
   height: 30px;
   text-align: center;
@@ -39,10 +39,11 @@
   height: 300px;
   position: relative;
   left: 200px;
-  top: 180px;
+  top: 130px;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: rgb(255, 255, 255);
 }
 
 #title1 {
@@ -57,9 +58,9 @@
   width: 100px;
   height: 100px;
   /* border: 1px groove grey; */
-  position: relative;
-  left: 830px;
-  top: -200px;
+  position: absolute;
+  left: 860px;
+  top: 110px;
 
 
 }
