--- a/Frontend/src/Usecase/Sidebar/sidebar.css
+++ b/Frontend/src/Usecase/Sidebar/sidebar.css
@@ -353,7 +353,7 @@ font-family: "poppins";
 .sidebar-2 {
   position: fixed;
   overflow: hidden;
-  top:58px;
+  top:59px;
   left: 0;
   width: 150px; /* Increased width for better readability */
   height: 100%;
@@ -434,18 +434,18 @@ font-family: "poppins";
 .navbar-item {
   cursor: pointer;
   letter-spacing: 1px;
-  font-size: 14px;
-  margin-bottom: 3px;
-  margin-left: -2px;
+  font-size: 15px;
+  margin-bottom: 8px;
+  margin-left: -10px;
   text-decoration: none;
   color: #4d4949;
-  font-weight: 600;
+  font-weight: 500;
   /* text-transform: uppercase; */
   
 }
 
 .navbar-item:hover {
-  font-size: 15px;
+  font-size: 16px;
   color: #0e0d0d;
 }
 
@@ -487,8 +487,17 @@ font-family: "poppins";
   cursor: pointer;
   letter-spacing: 1px;
   font-size: 13px;
-  margin-bottom: 3px;
-  margin-left: 0px;
+  margin-bottom: 30px;
+  margin-left: 5px;
+  text-decoration: none;
+  color: rgb(31, 30, 30);
+}
+.navbar-item3 {
+  cursor: pointer;
+  letter-spacing: 1px;
+  font-size: 13px;
+  margin-bottom: 30px;
+  margin-left: 10px;
   text-decoration: none;
   color: rgb(31, 30, 30);
 }
