--- a/Frontend/src/Usecase/projectdetails/project.css
+++ b/Frontend/src/Usecase/projectdetails/project.css
@@ -69,7 +69,7 @@
 }
 
 .sidebar {
-  background-color:  #5a8ca8;
+  background-color:  #2f434e;
   z-index: 500;
   position: fixed;
   overflow: hidden;
