--- a/Frontend/src/Component/Data/datas.css
+++ b/Frontend/src/Component/Data/datas.css
@@ -1,5 +1,5 @@
 .table-container {
-  margin-top: 20px;
+  
  
   max-width: 100%;
   max-height: 320px;
@@ -12,7 +12,7 @@
   width: 90%; /* Make the table fill the container */
   border-collapse: collapse; /* Collapse table borders */
   margin-left: 105px;
-  
+  margin-top: 85px;
  
 
 }
@@ -35,6 +35,9 @@
    font-size: 14px;
   top: 0;
   z-index: 2;
+}
+.admincon td{
+  font-size: 14px;
 }
 
 .admincon input[type="text"] {
