--- a/Frontend/src/Usecase/Navbar/navbar.css
+++ b/Frontend/src/Usecase/Navbar/navbar.css
@@ -21,9 +21,14 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
     height: 9%;
+    /* position: fixed;
+     top: 0; */
+    z-index: 5;
     color: rgb(245, 245, 245);
     background: linear-gradient(90deg, rgb(165, 221, 216) 10%, rgb(165, 176, 226) 100%);
+    
     /* background-color: #4ce26d; */
    
     
@@ -36,28 +41,7 @@
     width: 75%;
 } 
    
-.Home,.Admin,.Signout,.user{
-   
-    color: #ffffff;
-    text-decoration: none;
-    padding: 10px 40px;
-    margin-right: 13px;
-    cursor: pointer;
-    font-weight: 700;
-    letter-spacing: 1px;
-    font-size: 10px;
-  
- 
-   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    position: relative;
-    left: 300px;
-    
-   
-   
-    
 
-
-}
 #icons{
     word-spacing: 2px;
     font-size: 10px;
