--- a/Frontend/src/Usecase/Navbar/navbar.css
+++ b/Frontend/src/Usecase/Navbar/navbar.css
@@ -23,8 +23,8 @@
     align-items: center;
     width: 100%;
     height: 9%;
-    /* position: fixed;
-     top: 0; */
+    position: fixed;
+     top: 0;
     z-index: 5;
     color: rgb(245, 245, 245);
     background: linear-gradient(90deg, rgb(165, 221, 216) 10%, rgb(165, 176, 226) 100%);
